# internal/handler/response/error.go
@@ -1,0 +1,11 @@
+package response
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+func NewErrorResponse(message string) ErrorResponse {
+	return ErrorResponse{
+		Error: message,
+	}
+}
